<resources>
    <string name="app_name">Yes Player</string>
    <string name="app_version">v0.1.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Yes Player</string>
    <string name="nav_header_subtitle">steven_ye@foxmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="remove">移除</string>
    <string name="delete">删除</string>
    <string name="refresh">刷新</string>

    <string name="menu_home">主页</string>
    <string name="menu_phone">本地文件</string>
    <string name="menu_video">本机视频</string>
    <string name="menu_audio">本机音乐</string>
    <string name="menu_smbcifs">本地网络</string>
    <string name="menu_filelist">{title}</string>
    <string name="menu_history">播放历史</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>

    <string name="go_parent">上级目录</string>
    <string name="text_list_empty">没有内容</string>
    <string name="file_list_empty">没有文件</string>
    <string name="server_list_empty">没有共享设备</string>

    <string name="setting_player_title">播放器</string>
    <string name="setting_player_summary">没有内容</string>
    <string name="setting_player_dialog_title">选择播放器</string>
    <string name="setting_history_title">播放历史</string>
    <string name="setting_history_summary">是否自动加入播放历史</string>
    <string name="setting_hidden_title">隐藏文件/目录</string>
    <string name="setting_hidden_summary">显示隐藏文件/目录</string>

    <string name="btn_login_text">登录</string>
    <string name="btn_okay_text">确定</string>
    <string name="btn_cancel_text">取消</string>
    <string name="cb_anonymous_login">匿名登录</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_fragment">About fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>