<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="setting_player"
        android:title="@string/setting_player_title"
        android:summary="@string/setting_player_summary"
        android:icon="@drawable/ic_baseline_play_circle_filled_24"
        android:dialogTitle="@string/setting_player_dialog_title"
        android:defaultValue="ijk"
        android:entries="@array/entries_player_list"
        android:entryValues="@array/values_player_list" />
    <SwitchPreferenceCompat
        android:key="setting_history"
        android:title="@string/setting_history_title"
        android:summary="@string/setting_history_summary"
        android:icon="@drawable/ic_menu_history"
        android:defaultValue="true"/>
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_baseline_filter_tilt_shift_24"
        android:key="setting_hidden"
        android:summary="@string/setting_hidden_summary"
        android:title="@string/setting_hidden_title" />
</PreferenceScreen>