<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/local_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:background="@drawable/selector_list"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/ic_baseline_movie_24" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/menu_video" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/local_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:background="@drawable/selector_list"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/ic_baseline_music_video_24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/menu_audio" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/local_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_list"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/ic_baseline_folder_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_phone"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/grey_light"/>
        <ListView
            android:id="@+id/listview_smbcifs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:listSelector="@drawable/selector_listview" />

        <TextView
            android:id="@+id/text_list_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textColor="@color/grey_light"
            android:textSize="12sp"
            android:text="@string/server_list_empty" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>