<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <View
                    android:layout_width="3dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:background="#4A90E2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:text="登录信息"
                    android:textColor="#333"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/background_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="17dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="用户账号"
                    android:textColor="#666"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/account_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:hint="请输入帐号"
                    android:maxLines="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="17dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="登录密码"
                    android:textColor="#666"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:hint="请输入密码"
                    android:maxLines="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="17dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:text="所在域名"
                    android:textColor="#666"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/domain_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:hint="请输入域 (可忽略)"
                    android:maxLines="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="17dp">

                <CheckBox
                    android:id="@+id/anonymous_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_anonymous_login"
                    android:textColor="#666"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_grey"
            android:text="@string/btn_cancel_text"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_blue"
            android:text="@string/btn_login_text"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>